compiling code with mojo and pojo models